# PixelDance

./: .gitignore  CMakeLists.txt  ideas and todo.txt  readme.md
assets/: buiteveld94.txt  deoxyhemo.txt  hemoglob.txt  obsidian.txt
assets/Artist Paint Spectral Database/: k_values.csv  s_values.csv  source.link
assets/FORS spectra/: egg tempera.csv  fresco.csv  gum Arabic.csv  gum arabic refletion probe.csv  linseed oil.csv  powder.csv  source.link
assets/PlanktonDatabase/: 1-s2.0-S2352340919302264-mmc2.txt
cmake/: EmbedFileFTO.cmake
projects/: IFS2.lua  IFS3.lua  IFS_shader.lua  alchemical_engines.lua  angular_thingy.lua  ast_tree.llib  atoms.lua  base64.llib  blood.lua  cellular.lua  cellular_atomical.lua  cellular_blobs.lua  cellular_move.lua  cellular_move2.lua  cellular_multiscale.lua  cellular_multiscale3.lua  cellular_sparse.lua  cellular_sparse_float.lua  cellular_spectacular.lua  cellular_statistical.lua  chromatic_aberration.lua  circle.lua  circlething.lua  colors.llib  common.llib  common_math.llib  coord_system.lua  crystals.lua  crystals_game.lua  differiantial_growth.lua  disk_electrons.lua  disk_tree.lua  disk_tree_potential_well.lua  ecology.lua  ecology2.lua  ecology3.lua  ecology4.lua  engraving.lua  find_loop.lua  fractal.lua  (+63 more)
src/: buffer_data.cpp  buffer_data.hpp  cl_lite.h  filesys.cpp  filesys.h  gl_lite.h  imgui-SFML.cpp  imgui-SFML.h  limgui.cpp  limgui.h  lua_buffers.cpp  lua_buffers.h  lua_kd.cpp  lua_kd.h  lua_opencl.cpp  lua_opencl.h  lua_random.cpp  lua_random.h  lua_vk.cpp  lua_vk.h  main.cpp  main_win32.cpp  matrix.cpp  matrix.h  nanoflann.hpp  pcg_random.h  shaders.cpp  shaders.h  stb_image.h  stb_image_write.h  textures.cpp  textures.hpp  win32_lite.h
